--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,9 +16,10 @@
       </li>
     </ul>
     <span class="navbar-text">
-      <a *ngIf="!(loggedIn$)" routerLink="/login" routerLinkActive="active">Login</a> ||
-      <a *ngIf="!(loggedIn$)" routerLink="/register" routerLinkActive="active">Register</a>
-      <a *ngIf="(loggedIn$)" routerLink="/logout">Logout</a>
+      <a *ngIf="!(loggedIn$ | async)" routerLink="/login" routerLinkActive="active">Login</a>
+      <a *ngIf="!(loggedIn$ | async)" routerLink="/register" routerLinkActive="active">Register</a>
+      <p *ngIf="loggedIn$ | async as user">{{ user.displayName }}</p>
+      <a *ngIf="(loggedIn$ | async)" (click)="logout()" routerLink="/">Logout</a>
     </span>
   </div>
 </nav>
