--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+
+
+<nav class="navbar navbar-expand-lg navbar-dark nav-bg">
   <a class="navbar-brand" href="#">Towing Manager</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -6,20 +8,20 @@
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="pad" mat-raised-button color="primary" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
+        <a class="pad" mat-raised-button color="primary" href="#">Features</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
+        <a class="pad" mat-raised-button color="primary" href="#">Pricing</a>
       </li>
     </ul>
     <span class="navbar-text">
-      <a *ngIf="!(loggedIn$ | async)" routerLink="/login" routerLinkActive="active">Login</a>
-      <a *ngIf="!(loggedIn$ | async)" routerLink="/register" routerLinkActive="active">Register</a>
-      <p *ngIf="loggedIn$ | async as user">{{ user.displayName }}</p>
-      <a *ngIf="(loggedIn$ | async)" (click)="logout()" routerLink="/">Logout</a>
+      <a class="pad" mat-raised-button color="primary" *ngIf="!(loggedIn$ | async)" routerLink="/login" routerLinkActive="active">Login</a>
+      <a class="pad" mat-raised-button color="primary" *ngIf="!(loggedIn$ | async)" routerLink="/register" routerLinkActive="active">Register</a>
+      <p  *ngIf="loggedIn$ | async as user">{{ user.displayName }}</p>
+      <a class="pad" mat-raised-button color="primary" *ngIf="(loggedIn$ | async)" (click)="logout()" routerLink="/"><mat-icon>home</mat-icon>Logout</a>
     </span>
   </div>
 </nav>
