--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -1,3 +1,50 @@
-<p>
-  members works!
-</p>
+<br><br>
+
+<h1>Welcome {{ info.email }}</h1>
+<div class="row justify-content-center">
+  <div class="col-md-6 justify-content-center text-center">
+    <mat-card class="example-card">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"><img class="avatar" src="{{ info.profile_pic }}"> </div>
+        <mat-card-title><h3>Welcome {{ info.first }} {{ info.last }}</h3></mat-card-title>
+        <mat-card-subtitle class="text-center">{{ info.company }}</mat-card-subtitle>
+      </mat-card-header>
+
+      <mat-card-content>
+        <mat-list>
+          <mat-list-item>First Name: {{ info.first }}</mat-list-item>
+          <mat-list-item>Last Name: {{ info.last }}</mat-list-item>
+          <mat-list-item>Company: {{ info.company }}</mat-list-item>
+          <mat-list-item>Email: {{ info.email }}</mat-list-item>
+          <mat-list-item>Address: {{ info.address_line1 }}</mat-list-item>
+          <mat-list-item *ngIf="info.address_line2"> {{ info.address_line2 }}</mat-list-item>
+          <mat-list-item>City: {{ info.city }}</mat-list-item>
+          <mat-list-item>State: {{ info.state }}</mat-list-item>
+          <mat-list-item>ZIP: {{ info.zip }}</mat-list-item>
+          <mat-list-item>Date Joined: {{ info.date_joined }}</mat-list-item>
+        </mat-list>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button routerLink="/profile/edit">Edit Profile</button>
+
+      </mat-card-actions>
+    </mat-card>
+  </div>
+  <div class="col-md-6 justify-content-center text-center">
+    <mat-card class="example-card">
+      <mat-card-header>
+        <mat-card-title><h3><div class="icon"><mat-icon>account_balance</mat-icon></div>Income Report</h3></mat-card-title>
+        <mat-card-subtitle>{{ info.company }}</mat-card-subtitle>
+      </mat-card-header>
+
+      <mat-card-content>
+        <img src="../assets/images/example_chart.png">
+
+      </mat-card-content>
+      <mat-card-actions>
+        <a mat-button routerLink="/profile/edit">Edit Profile</a>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+</div>
+
