--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <br><br>
 <div class="row justify-content-center">
   <div class="col-6 justify-content-center">
@@ -76,7 +77,8 @@
           </div>
           <div class="form-group">
             <label for="address2">Address Line Two</label>
-            <input class="form-control" ngModel #address2="ngModel" name="address2" type="text" id="address2" placeholder="Address Line Two">
+            <input class="form-control" ngModel #address2="ngModel" name="address2" type="text" id="address2"
+                   placeholder="Address Line Two">
           </div>
           <div class="form-row">
             <div class="form-group col-md-6">
@@ -89,13 +91,13 @@
             <div class="form-group col-md-4">
               <label for="state">State</label>
               <select required ngModel name="state" #state="ngModel" id="state" class="form-control">
-                <option selected>GA</option>
-                <option>FL</option>
+                <option *ngFor="let state of states">{{ state.name }}</option>
               </select>
             </div>
             <div class="form-group col-md-2">
               <label for="zip">Zip</label>
-              <input required pattern="^[0-9]{5}(?:-[0-9]{4})?$" name="zip" minlength="5" maxlength="5" ngModel #zip="ngModel" type="text"
+              <input required pattern="^[0-9]{5}(?:-[0-9]{4})?$" name="zip" minlength="5" maxlength="5" ngModel
+                     #zip="ngModel" type="text"
                      class="form-control" id="zip">
             </div>
             <div *ngIf="zip.touched && zip.errors" class="alert alert-danger error">
