--- a/src/app/owner_area/owner-dashboard-sidebar/owner-dashboard-sidebar.component.html
+++ b/src/app/owner_area/owner-dashboard-sidebar/owner-dashboard-sidebar.component.html
@@ -1,6 +1,6 @@
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" (click)="closeNav()">&times;</a>
-  <a href="#">About</a>
+  <a routerLink="/owner">Dashboard</a>
   <a href="#">Services</a>
   <a href="#">Clients</a>
   <a routerLink='/contacts'><mat-icon>assignment_ind</mat-icon>Contacts</a>
