--- a/src/app/owner_area/owner-dashboard-header/owner-dashboard-header.component.html
+++ b/src/app/owner_area/owner-dashboard-header/owner-dashboard-header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark nav-bg">
+<nav class="navbar navbar-expand-lg navbar-dark nav-bg mat-elevation-z10">
   <a class="navbar-brand" href="#">Towing Manager</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
